# wujek-apka

./: .env.example  .gitignore  HYPERFRAMES.md  LOGI_API.md  config.yaml  preview.html  pyproject.toml  setup.ps1  tamplate.html  test.py
.cursor/plans/: HYPERFRAMES_UI_HTML_ROADMAP.md  hyperframes_ui_invisible_fc100580.plan.md
assets/hyperframes/: dynamic-ad.js
docs/agents/: CURRENT_ARCHITECTURE.md  DECISIONS.md  GLOSSARY.md  HYPERFRAMES_CONTRACT.md  TASK_ROUTING.md
hyperframes-commercial-app-ad/: README.md  VALIDATION.md  index.html  validate-static.js
hyperframes-commercial-app-ad/assets/: README.md
hyperframes-commercial-app-ad/compositions/: add-meal.html  cta.html  hook.html  ingredients.html  insights.html  nutrition.html  results.html  scanning.html
hyperframes-dashboard-template/hyperframes-dashboard-template/: VALIDATION.md  index.html
hyperframes-meal-detail-template/hyperframes-meal-detail-template/: VALIDATION.md  (+1 more)
hyperframes_composition/: index.html
schemas/: logi-nutrition-values.schema.json  logi-scan-request.schema.json  logi-scan-response.schema.json
scripts/: hyperframes-run.ps1
src/: __init__.py  ad_data.py  cli.py  compose_ffmpeg.py  config.py  errors.py  heygen_client.py  hyperframes_runner.py  hyperframes_smoke.py  image_generation.py  llm_script.py  logging_utils.py  logi_client.py  pipeline.py  r2_uploader.py  record_browser.py  render_context.py  render_html.py  render_hyperframes.py  subtitles.py  template_logi.py  utils.py
templates/: scroll_driver.js
tests/: test_dynamic_pipeline.py  test_hyperframes_inject.py
(+21 files in other folders)
